--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,129 @@
 .App {
-  text-align: center;
+    text-align: center;
+	margin: 2rem 0;
+	
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Card {
+    max-width: 600px;
+    margin: auto;
+    margin-bottom: 0.1rem;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 1rem;max-width: 600px;
+    margin: auto;
+    margin-bottom: 0.1rem;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 1rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.Card > div {
+    display: flex;
+    align-items: center;
+}
+
+.Card--avatar {
+    width: 100px;
+    height: 100px;
+	border: 10px solid;
+	border-width: 1px;
+	border-radius: 100%;
+    margin-right: 0.5rem;
+}
+
+.Card--logo {
+    width: 30px;
+    height: 30px;
+}
+
+.Card--name {
+    text-transform: capitalize;
+    font-size: 1.1rem;
+}
+.Card--bio {
+    text-transform: capitalize;
+    font-size: 1.0rem;
+}
+
+.Card--link {
+    text-decoration: none;
+    background: #00ace0;
+    color: #fff;
+    font-weight: 600;
+    padding: 0.45rem 0.7rem;
+    border-radius: 20px;
+}
+
+.Card--stats {
+    margin: auto;
+    justify-content: space-between;
+	padding: 0.5rem 1rem;
+	align-items: center;
+
+}
+
+.Card--stats > span {
+	background: #00ace0;
+    color: #fff;
+    font-weight: 500;
+	padding: 0.45rem 0.8rem;
+	border-radius: 5px;
+	margin-right: 1px;
+}
+
+.lds-heart {
+	display: inline-block;
+	position: relative;
+	width: 80px;
+	height: 80px;
+	transform: rotate(45deg);
+	transform-origin: 40px 40px;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .lds-heart div {
+	top: 32px;
+	left: 32px;
+	position: absolute;
+	width: 32px;
+	height: 32px;
+	background: red;
+	animation: lds-heart 1.2s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
   }
-  to {
-    transform: rotate(360deg);
+  .lds-heart div:after,
+  .lds-heart div:before {
+	content: " ";
+	position: absolute;
+	display: block;
+	width: 32px;
+	height: 32px;
+	background:red;
   }
-}
+  .lds-heart div:before {
+	left: -24px;
+	border-radius: 50% 0 0 50%;
+  }
+  .lds-heart div:after {
+	top: -24px;
+	border-radius: 50% 50% 0 0;
+  }
+  @keyframes lds-heart {
+	0% {
+	  transform: scale(0.95);
+	}
+	5% {
+	  transform: scale(1.1);
+	}
+	39% {
+	  transform: scale(0.85);
+	}
+	45% {
+	  transform: scale(1);
+	}
+	60% {
+	  transform: scale(0.95);
+	}
+	100% {
+	  transform: scale(0.9);
+	}
+  }
+  
