--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,15 @@
     margin-right: 0.5rem;
 }
 
+.Card--avatar2 {
+    width: 50px;
+    height: 50px;
+	border: 10px solid;
+	border-width: 1px;
+	border-radius: 100%;
+    margin-right: 0.5rem;
+}
+
 .Card--logo {
     width: 30px;
     height: 30px;
